# rustNifs_for_CNFTs

./: .gitignore  README.md  mix.exs
lib/: rust_nifs_for_elixir.ex
native/mplbubblegumnif/: Cargo.toml  README.md
native/mplbubblegumnif/src/: error.rs  lib.rs  transaction.rs  utils.rs
test/: rust_nifs_for_elixir_test.exs
