[package]
name = "mplbubblegumnif"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "mplbubblegumnif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.21"
borsh = ">= 0.9, < 1.0"
mpl-bubblegum = "1.4.0"
rustler = "0.29.0"
serde = "1.0.218"
serde_json = "1.0.140"
solana-client = "1.14.0"
solana-program = "1.14.0"
solana-sdk = "1.14.0"
thiserror = "2.0.12"
